--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,8 +2,15 @@
 <%= @task.id %>
  のタスク詳細ページ</h1>
 
-<p>
+<p>ステータス: 
+<%= @task.status %>
+</p>
+<p>タスク:
 <%= @task.content %>
 </p>
 
 <%= link_to '一覧に戻る', tasks_path %>
+
+<%= link_to 'このタスクを編集する', edit_message_path(@message) %>
+
+%= link_to 'このタスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
